[feature/WEDPRO-88] cors 설정 수정